[project]
name = "talkingdb-helpers"
version = "1.0.0"
description = "Shared domain helpers for TalkingDB ecosystem"
authors = [
    { name = "immkg", email = "mayank.g@smarter.codes" }
]
readme = "README.md"
requires-python = ">=3.12,<3.14"

[tool.poetry]
packages = [{ include = "talkingdb" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

talkingdb-models = { git = "git+https://github.com/TalkingDB/base-tdb-models.git", rev = "cd57f4b0f6a4f744e57ddb78d392b215f3c0f7b7" }
talkingdb-clients = { git = "git+https://github.com/TalkingDB/base-tdb-clients.git", rev = "e73b24e74cbf564094c1b9df4203d82caa2bfd87" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
