[project]
name = "talkingdb-helpers"
version = "1.0.0"
description = "Shared domain helpers for TalkingDB ecosystem"
authors = [
    { name = "immkg", email = "mayank.g@smarter.codes" }
]
readme = "README.md"
requires-python = ">=3.12,<3.14"

[tool.poetry]
packages = [{ include = "talkingdb" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

talkingdb-models = { git = "git+https://github.com/TalkingDB/base-tdb-models.git", rev = "cd57f4b0f6a4f744e57ddb78d392b215f3c0f7b7" }
talkingdb-clients = { git = "git+https://github.com/TalkingDB/base-tdb-clients.git", rev = "3a5b2fb72af64d3b04788bbd78f73be528dc84f8" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
